@@ -69,6 +69,7 @@ if test "x$GCC" = "xyes"; then
 	XAU_CFLAGS="$GCC_WARNINGS $XAU_CFLAGS"
 fi
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile
